[tool.poetry]
name = "packratt"
version = "0.1.3"
description = ""
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
include = ["conf/registry.yaml", "conf/registry-schema.yaml"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
pytest = {version = "^5.4.2", optional = true, extras = ["testing"]}
pytest-flake8 = {version = "^1.0.6", optional = true, extras = ["testing"]}
appdirs = "^1.4.4"
jsonschema = "^3.2.0"
pyyaml = "^6.0"


[tool.poetry.extras]
testing = ["pytest", "pytest-flake8"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[tool.poetry.scripts]
packratt = 'packratt.application:run'
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
